# Lidar_localization

./: CMakeLists.copy  CMakeLists.txt  README.md
Log/: back_end_node.INFO  back_end_node.sxypc.sxy.log.INFO.20201021-190222.16393  matching_node.INFO  matching_node.sxypc.sxy.log.INFO.20201024-215627.22577  matching_node.sxypc.sxy.log.INFO.20201024-220900.13212  matching_node.sxypc.sxy.log.INFO.20201024-221939.542  matching_node.sxypc.sxy.log.INFO.20201024-223851.2425  matching_node.sxypc.sxy.log.INFO.20201024-223932.3908  matching_node.sxypc.sxy.log.INFO.20201025-145959.32242  matching_node.sxypc.sxy.log.INFO.20201025-160749.4648  matching_node.sxypc.sxy.log.INFO.20201025-220251.29191  matching_node.sxypc.sxy.log.INFO.20201025-220751.7398  matching_node.sxypc.sxy.log.INFO.20201025-220812.8496  matching_node.sxypc.sxy.log.INFO.20201025-221007.13095  matching_node.sxypc.sxy.log.INFO.20201025-221111.15679  matching_node.sxypc.sxy.log.INFO.20201025-221427.23172  matching_node.sxypc.sxy.log.INFO.20201025-221707.29058  matching_node.sxypc.sxy.log.INFO.20201025-222153.6655  matching_node.sxypc.sxy.log.INFO.20201025-222331.10369  matching_node.sxypc.sxy.log.INFO.20201026-091231.29162  matching_node.sxypc.sxy.log.INFO.20201026-091924.9264  matching_node.sxypc.sxy.log.INFO.20201026-092043.12112  matching_node.sxypc.sxy.log.INFO.20201026-092229.15591  matching_node.sxypc.sxy.log.INFO.20201026-093854.12626  matching_node.sxypc.sxy.log.INFO.20201026-103206.24017  matching_node.sxypc.sxy.log.INFO.20201026-103344.28466  matching_node.sxypc.sxy.log.INFO.20201026-103534.462  matching_node.sxypc.sxy.log.INFO.20201026-124240.32689  matching_node.sxypc.sxy.log.INFO.20201026-124334.2460  matching_node.sxypc.sxy.log.INFO.20201026-124545.7166  matching_node.sxypc.sxy.log.INFO.20201026-124927.16241  matching_node.sxypc.sxy.log.INFO.20201026-125444.27774  matching_node.sxypc.sxy.log.INFO.20201026-125535.29572  matching_node.sxypc.sxy.log.INFO.20201026-125758.2213  matching_node.sxypc.sxy.log.INFO.20201026-130035.7764  matching_node.sxypc.sxy.log.INFO.20201026-131045.28504  matching_node.sxypc.sxy.log.INFO.20201026-131632.8270  matching_node.sxypc.sxy.log.INFO.20201026-132127.20253  matching_node.sxypc.sxy.log.INFO.20201026-132303.24033  matching_node.sxypc.sxy.log.INFO.20201026-133445.16207  (+7 more)
cmake/: FindG2O.cmake  g2o.cmake
config/: cloudtopic  topic_name
config/matching/: matching.yaml  scpara.yaml
rviz/: matching.rviz
slam_data/key_frames/: key_frame_0.pcd  key_frame_1.pcd  key_frame_2.pcd
slam_data/trajectory/: ground_truth.txt  laser_odom.txt
src/apps/: data_pretreat_node.cpp  makesc_node.cpp  matching_node.cpp
src/data_pretreat/: data_pretreat_flow.cpp
src/matching/: matching.cpp  (+1 more)
(+28 files in other folders)
